商品模块的构建与完善

--- a/dailyFresh/templates/base2.html
+++ b/dailyFresh/templates/base2.html
@@ -16,6 +16,8 @@
 			<div class="fr">
 				<div class="login_info fl" id="logined">
 					欢迎您：<em>张 山</em>
+					<span>|</span>
+					<a href="/user/quit/">&nbsp;&nbsp;退 出</a>
 
 				</div>
 				<div class="login_btn fl" id="no_login">
@@ -32,8 +34,7 @@
 					<a href="/user/user_site">我的购物车</a>
 					<span>|</span>
 					<a href="/user/user_order/">我的订单</a>
-					<span>|</span>
-					<a href="/user/quit/">退 出</a>
+
 				</div>
 			</div>
 		</div>		
